force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/acn_ttn__ACN_Novasaas_Project_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>acn_ttn__NovaSalesforce</externalDataSource>
    <externalName>ACN_Novasaas__Project__c</externalName>
    <label>Nova Project</label>
    <pluralLabel>Nova Projects</pluralLabel>
</CustomObject>