force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/fields/acn_ttn__ACN_Novasaas_Customization_Status_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Customization_Status_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ACN_Novasaas__Customization_Status__c</externalDeveloperName>
    <label>Customization Status</label>
    <type>Checkbox</type>
</CustomField>