force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/fields/acn_ttn__ACN_Novasaas_Project_End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Project_End_Date_c__c</fullName>
    <externalDeveloperName>ACN_Novasaas__Project_End_Date__c</externalDeveloperName>
    <inlineHelpText>Project End Date till which Novacop should automatically scan and send the Novacop Dashboard</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>