force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/fields/acn_ttn__ACN_Novasaas_Project_POC_Name_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__ACN_Novasaas_Project_POC_Name_c__c</fullName>
    <externalDeveloperName>ACN_Novasaas__Project_POC_Name__c</externalDeveloperName>
    <label>Project POC Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>