force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/fields/acn_ttn__Latest_P2_Count_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Latest_P2_Count_c__c</fullName>
    <externalDeveloperName>Latest_P2_Count__c</externalDeveloperName>
    <label>Latest P2 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>