force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/fields/acn_ttn__Release_Date_c__c.field-meta.xml
<CustomField>
    <fullName>acn_ttn__Release_Date_c__c</fullName>
    <externalDeveloperName>Release_Date__c</externalDeveloperName>
    <label>Release Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>