force-app/main/default/objects/acn_ttn__ACN_Novasaas_Project_c__x/listViews/acn_ttn__All.listView-meta.xml
<ListView>
    <fullName>acn_ttn__All</fullName>
    <columns>acn_ttn__Name__c</columns>
    <columns>DisplayUrl</columns>
    <columns>acn_ttn__ACN_Novasaas_Source_Org_ID_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>